--- a/template.css
+++ b/template.css
@@ -349,3 +349,17 @@ button:hover{
 
     color: #000000;
 }
+
+/*Register*/
+.Register-Rectangle{
+    position: absolute;
+    width: 722px;
+    height: 572px;
+    left: -28px;
+    top: 250px;
+
+    background: #F0F0F0;
+    opacity: 0.9;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 40px;
+}
