--- a/html/template.css
+++ b/html/template.css
@@ -192,6 +192,13 @@ button:hover{
     left: 0px;
     top: 104px;
 }
+.img-register{
+    position: absolute;
+    width: 1440px;
+    height: 920px;
+    left: 0px;
+    top: 104px;
+}
 
 /*blur background*/
 .login-blur{
@@ -362,4 +369,37 @@ button:hover{
     opacity: 0.9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 40px;
+}
+.Register-input-Username{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 573px;
+    height: 47px;
+    left: 46px;
+    top: 336px;
+
+    border: 1px solid #000000;
+    border-radius: 40px;
+}
+.RegisterText-username{
+    position: absolute;
+    width: 133px;
+    height: 25px;
+    left: 19px;
+    top: 286px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+
+    color: #000000;
+
+}
+.Register-input-username>input{
+    flex-grow: 1;
+    border: none;
+    outline: none;
 }
