--- a/html/css/addstyle.css
+++ b/html/css/addstyle.css
@@ -55,6 +55,7 @@ html, body {
     top: 191.5px;
 
     border: 10px solid #FFFFFF;
+    border-radius: 40px;
 }
 
 .gamename{
@@ -75,8 +76,65 @@ html, body {
 
 }
 .content {
+    position: relative;
 }
+.gamepic {
+    position: absolute;
+    width: 241px;
+    height: 308px;
+    left: 85px;
+    top: 404px;
 
+    background: #D9D9D9;
+}
+.plusicon {
+    position: absolute;
+    width: 145px;
+    height: 145px;
+    left: 133px;
+    top: 485px;
+}
+.gamedetail {
+    position: absolute;
+    width: 836px;
+    height: 217px;
+    left: 432px;
+    top: 449px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 39px;
+
+    color: #FFFFFF;
+}
+.save-button {
+    position: absolute;
+    width: 185px;
+    height: 47px;
+    left: 1302px;
+    top: 882px;
+
+    background: #FFFFFF;
+    border-radius: 40px;
+}
+.save {
+    position: absolute;
+    width: 119px;
+    height: 22px;
+    left: 1335px;
+    top: 892px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+
+    color: #000000;
+}
 .under {
     position: absolute;
     width: 100%;
