--- a/html/css/addstyle.css
+++ b/html/css/addstyle.css
@@ -33,7 +33,7 @@ html, body {
 .pagename{
     position: absolute;
     height: 52px;
-    left: 1400px;
+    left: 1350px;
     top: 26px;
 
     font-family: Arial, Helvetica, sans-serif;
@@ -77,6 +77,7 @@ html, body {
 }
 .content {
     position: relative;
+    height: 920;
 }
 .gamepic {
     position: absolute;
@@ -226,4 +227,11 @@ html, body {
     line-height: 24px;
 
     color: #FFFFFF;
+}
+.crosspic {
+    position: absolute;
+    width: 54px;
+    height: 53px;
+    left: 241px;
+    top: -41px;
 }
