--- a/html/template.css
+++ b/html/template.css
@@ -875,3 +875,217 @@ color: #FFFFFF;
 
     color: #FFFFFF;
 }
+
+/*Cart*/
+.Cart-text{
+    position: absolute;
+    width: 223px;
+    height: 42px;
+    left: 102px;
+    top: 173px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 44px;
+    text-decoration-line: underline;
+
+    color: #FFFFFF;
+}
+.Cart-text-center{
+    position: absolute;
+    width: 509px;
+    height: 58px;
+    left: 463px;
+    top: 466px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 58px;
+    /* identical to box height */
+
+
+    color: #FFFFFF;
+
+}
+.Cart-register{
+    position: absolute;
+    width: 350px;
+    height: 58px;
+    left: 380px;
+    top: 524px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 58px;
+    /* identical to box height */
+
+    text-decoration-line: underline;
+
+    color: #FFFFFF;
+}
+.Cart-text-center-between{
+    position: absolute;
+    width: 212px;
+    height: 58px;
+    left: 735px;
+    top: 524px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 58px;
+    /* identical to box height */
+
+
+    color: #FFFFFF;
+
+}
+.Cart-login{
+    position: absolute;
+    width: 147px;
+    height: 58px;
+    left: 917px;
+    top: 524px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 58px;
+    /* identical to box height */
+
+    text-decoration-line: underline;
+
+    color: #FFFFFF;
+}
+/*Cart-game1*/
+.Cart-Games-Rec-1{
+    position: absolute;
+    width: 1253px;
+    height: 268px;
+    left: 102px;
+    top: 254px;
+
+    background: #555555;
+    border-radius: 15px;
+}
+.Cart-Games-Pics-1{
+    position: absolute;
+    width: 245px;
+    height: 225px;
+    left: 148px;
+    top: 275px;
+
+    background: #F5F5F5;
+    border-radius: 15px;
+}
+.Cart-Games-Name-1{
+    position: absolute;
+    width: 158px;
+    height: 64px;
+    left: 452px;
+    top: 333px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 58px;
+    text-decoration-line: underline;
+
+    color: #FFFFFF;
+
+}
+.Cart-Games-PriceRec-1{
+    position: absolute;
+    width: 195px;
+    height: 62px;
+    left: 1142px;
+    top: 275px;
+
+    background: #D9D9D9;
+    border-radius: 15px;
+}
+.Cart-Games-PriceText-1{
+    position: absolute;
+    width: 161px;
+    height: 43px;
+    left: 1165px;
+    top: 269px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 39px;
+
+    color: #000000;
+}
+.Cart-Games-Rec-2{
+    position: absolute;
+    width: 1253px;
+    height: 268px;
+    left: 102px;
+    top: 589px;
+
+    background: #555555;
+    border-radius: 15px;
+}
+.Cart-Games-Pics-2{
+    position: absolute;
+    width: 245px;
+    height: 225px;
+    left: 148px;
+    top: 610px;
+
+    background: #F5F5F5;
+    border-radius: 15px;
+}
+.Cart-Games-Name-2{
+    position: absolute;
+    width: 158px;
+    height: 64px;
+    left: 452px;
+    top: 668px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 58px;
+    text-decoration-line: underline;
+
+    color: #FFFFFF;
+}
+.Cart-Games-PriceRec-2{
+    position: absolute;
+    width: 195px;
+    height: 62px;
+    left: 1142px;
+    top: 610px;
+
+    background: #D9D9D9;
+    border-radius: 15px;
+}
+.Cart-Games-PriceText-2{
+    position: absolute;
+    width: 161px;
+    height: 43px;
+    left: 1165px;
+    top: 604px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 39px;
+
+    color: #000000;
+}
