--- a/html/template.css
+++ b/html/template.css
@@ -1028,6 +1028,14 @@ color: #FFFFFF;
 
     color: #000000;
 }
+.Cart-Games-Close-1{
+    position: absolute;
+    width: 23px;
+    height: 22px;
+    left: 109px;
+    top: 264px;
+}
+
 .Cart-Games-Rec-2{
     position: absolute;
     width: 1253px;
@@ -1088,4 +1096,11 @@ color: #FFFFFF;
     line-height: 39px;
 
     color: #000000;
+}
+.Cart-Games-Close-2{
+    position: absolute;
+    width: 23px;
+    height: 22px;
+    left: 109px;
+    top: 599px;
 }
