--- a/steamClone_project/steamClone/templates/steamClone/Register.html
+++ b/steamClone_project/steamClone/templates/steamClone/Register.html
@@ -12,7 +12,7 @@
 <h1 class="RegisterText-tobe">to be our Enemy</h1>
 
 <!--RegisterBar-->
-<area class="Register-Rectangle" />
+<rect class="Register-Rectangle"/>
 
 <h1 class="RegisterText-username">USERNAME</h1>
 <div class="Register-input-Username">
