--- a/steamClone_project/steamClone/templates/steamClone/Login.html
+++ b/steamClone_project/steamClone/templates/steamClone/Login.html
@@ -15,7 +15,7 @@
 <div class="login-input-username">
   <input
     type="text"
-    name="q"
+    name="username"
     size="51"
     class="form-control form-control-lg"
     placeholder="Type username..."
@@ -25,7 +25,7 @@
 <div class="login-input-password">
   <input
     type="text"
-    name="q"
+    name="password"
     size="51"
     class="form-control form-control-lg"
     placeholder="Type password..."
