--- a/steamClone_project/steamClone/templates/steamClone/Main.html
+++ b/steamClone_project/steamClone/templates/steamClone/Main.html
@@ -5,6 +5,7 @@
 {% block content %}
 <!---->
 <!--Background image-->
+<area class="BG-Rect" />
 <div class="img-login"></div>
 <img class="img-main" src="{% static 'steamClone/res/MainBG.webp' %}" />
 <area class="main-blur" />
