--- a/steamClone_project/steamClone/templates/steamClone/Profile-Login.html
+++ b/steamClone_project/steamClone/templates/steamClone/Profile-Login.html
@@ -5,6 +5,7 @@
 {% block content %}
 <!---->
 <!--RectangleBG-->
+<area class="BG-Rect" />
 <area class="Profile-BG-Rectangle" />
 <!--Info-->
 <area class="Profile-user-circle" />
