fix cart not found on web

--- a/steamClone_project/steamClone/templates/steamClone/base.html
+++ b/steamClone_project/steamClone/templates/steamClone/base.html
@@ -61,7 +61,7 @@
       <a class="bottomBar-library" href="{% url 'profile' %}"
         ><img src="{% static 'steamClone/res/Library.png' %}"
       /></a>
-      <a class="bottomBar-cart" href="Cart.html"
+      <a class="bottomBar-cart" href="{% url 'cart' %}"
         ><img src="{% static 'steamClone/res/Cart.png' %}"
       /></a>
 
