--- a/steamClone_project/steamClone/templates/steamClone/Register.html
+++ b/steamClone_project/steamClone/templates/steamClone/Register.html
@@ -1,11 +1,14 @@
 {% extends "steamClone/base.html" %}
 <!---->
+{% load crispy_forms_tags %}
+<!---->
 {% load static %}
 <!---->
 {% block content %}
 <!---->
+<link rel="stylesheet" />
 <!--Background image-->
-<area class="BG-Rect">
+<area class="BG-Rect" />
 <img class="img-login" src="{% static 'steamClone/res/RegisterBG.png' %}" />
 
 <!--Register text-->
@@ -15,43 +18,22 @@
 <!--RegisterBar-->
 <area class="Register-Rectangle" />
 
-<h1 class="RegisterText-username">USERNAME</h1>
-<div class="Register-input-Username">
-  <input
-    type="text"
-    name="username"
-    size="51"
-    class="form-control form-control-lg"
-    placeholder="Type username..."
-  />
+<div
+  class="container"
+  style="position: absolute; width: 600px; top: 300px; left: 29px"
+>
+  <form action="" method="POST">
+    {% csrf_token %}
+    <fieldset class="form-group">{{ form|crispy }}</fieldset>
+    <div class="form-group" id="signup-button">
+      <button class="btn btn-success">Sign Up</button>
+    </div>
+    <div class="form-group">
+      <small class="text-muted ml-3"
+        >Already have an account? <a href="{% url 'login' %}">Sign In</a></small
+      >
+    </div>
+  </form>
 </div>
-
-<h1 class="RegisterText-password">PASSWORD</h1>
-<div class="Register-input-password">
-  <input
-    type="text"
-    name="password"
-    size="51"
-    class="form-control form-control-lg"
-    placeholder="Type password..."
-  />
-</div>
-
-<h1 class="RegisterText-confirm">CONFIRM PASSWORD</h1>
-<div class="Register-input-confirm">
-  <input
-    type="text"
-    name="confirm"
-    size="51"
-    class="form-control form-control-lg"
-    placeholder="Type password again..."
-  />
-</div>
-<input
-  type="submit"
-  name="btnK"
-  value="REGISTER"
-  class="register-button-rectangle"
-/>
 <!---->
 {% endblock content %}
