modiy base and admin

--- a/steamClone_project/steamClone/templates/steamClone/Add-Admin.html
+++ b/steamClone_project/steamClone/templates/steamClone/Add-Admin.html
@@ -4,17 +4,13 @@
 <!---->
 {% block content %}
 <!---->
-<header class="header">
-    <a class="menu-header" href="{% url 'main' %}">SteamClone</a>
-    <a class="pagename">Add</a>
-</header>
 <div class="content">
 
     <div class="border"></div>
     <a class="gamename">GAME NAME...</a>
 
     <div class="gamepic addpic"></div>
-    <img class="plusicon" src="pic/plus.png"></img>
+    <img class="plusicon" src="{% static 'steamClone/pic/plus.png' %}"></img>
     <a class="gamedetail">write detail here</a>
     <div class="save-button"></div>
     <a class="save">save</a>
