--- a/steamClone_project/steamClone/templates/steamClone/Delete-Admin.html
+++ b/steamClone_project/steamClone/templates/steamClone/Delete-Admin.html
@@ -4,28 +4,24 @@
 <!---->
 {% block content %}
 <!---->
-<header class="header">
-    <a class="menu-header" href="{% url 'main' %}">SteamClone</a>
-    <a class="pagename">Delete</a>
-</header>
 <div class="content">
     <div class="border"></div>
     <a class="maintext">Games</a>
 
     <div class="gamepic editpic1">
-        <img class="crosspic" src="pic/cross.png"></img>
+        <img class="crosspic" src="{% static 'steamClone/pic/cross.png' %}"></img>
         <a class="gamenameedit">name</a>
     </div>
     <div class="gamepic editpic2">
-        <img class="crosspic" src="pic/cross.png"></img>
+        <img class="crosspic" src="{% static 'steamClone/pic/cross.png' %}"></img>
         <a class="gamenameedit">name</a>
     </div>
     <div class="gamepic editpic3">
-        <img class="crosspic" src="pic/cross.png"></img>
+        <img class="crosspic" src="{% static 'steamClone/pic/cross.png' %}"></img>
         <a class="gamenameedit">name</a>
     </div>
     <div class="gamepic editpic4">
-        <img class="crosspic" src="pic/cross.png"></img>
+        <img class="crosspic" src="{% static 'steamClone/pic/cross.png' %}"></img>
         <a class="gamenameedit">name</a>
     </div>
 
