make admin work

--- a/steamClone_project/steamClone/static/steamClone/css/addstyle.css
+++ b/steamClone_project/steamClone/static/steamClone/css/addstyle.css
@@ -213,6 +213,10 @@ html, body {
     left: 1092px;
     top: 333px;
 }
+.editpic5 {
+    left: 126px;
+    top: 389px;
+}
 .gamenameedit {
     position: absolute;
     width: 52px;
