--- a/steamClone_project/steamClone/templates/steamClone/Edit-Admin.html
+++ b/steamClone_project/steamClone/templates/steamClone/Edit-Admin.html
@@ -5,24 +5,47 @@
 {% block content %}
 <!---->
 <div class="content">
-  <a class="fontsizeedit addtext" href="{% url 'add' %}">Add</a>
-  <a class="fontsizeedit deletetext" href="{% url 'delete' %}">Delete</a>
-
-  <div class="border"></div>
-  <a class="maintext">Games</a>
-
-  <div class="gamepic editpic1">
-    <a class="gamenameedit">name</a>
-  </div>
-  <div class="gamepic editpic2">
-    <a class="gamenameedit">name</a>
-  </div>
-  <div class="gamepic editpic3">
-    <a class="gamenameedit">name</a>
-  </div>
-  <div class="gamepic editpic4">
-    <a class="gamenameedit">name</a>
-  </div>
+  <table
+    class="table table-borderless"
+    style="position: absolute; top: 20px; left: 50px"
+  >
+    <thead class="border-bottom font-weight-bold">
+      <tr>
+        <td>Game Name</td>
+        <td>Genre</td>
+        <td>Price</td>
+        <td>
+          <a href="{% url 'add' %}" class="btn btn-outline-success">
+            <i class="fas fa-plus"></i> Add New
+          </a>
+        </td>
+      </tr>
+    </thead>
+    <tbody>
+      {% for game in gameList %}
+      <tr>
+        <td>{{game.name}}</td>
+        <td>{{game.genre}}</td>
+        <td>{{game.price}}$</td>
+        <td>
+          <a href="{% url 'edit' game.id %}" class="btn text-secondary px-0">
+            <i class="far fa-edit fa-lg"></i>
+          </a>
+          <form
+            action="{% url 'delete' game.id %}"
+            method="post"
+            class="d-inline"
+          >
+            {% csrf_token %}
+            <button type="submit" class="btn">
+              <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+            </button>
+          </form>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
 <!---->
 {% endblock content %}
