--- a/steamClone_project/steamClone/templates/steamClone/Genre-Admin.html
+++ b/steamClone_project/steamClone/templates/steamClone/Genre-Admin.html
@@ -17,13 +17,7 @@
   </div>
 
   <form action="" method="post" autocomplete="off">
-    {% csrf_token %} {{form.name|as_crispy_field}}
-    {{form.description|as_crispy_field}}
-    <div class="row">
-      <div class="col-md-4">{{form.genre|as_crispy_field}}</div>
-      <div class="col-md-8">{{form.price|as_crispy_field}}</div>
-    </div>
-    {{form.poster|as_crispy_field}}
+    {% csrf_token %} {{form.title|as_crispy_field}}
     <div class="row">
       <div class="col-md-8">
         <button type="submit" class="btn btn-success btn-block btn-lg">
