--- a/steamClone_project/steamClone/templates/steamClone/base.html
+++ b/steamClone_project/steamClone/templates/steamClone/base.html
@@ -44,7 +44,7 @@
     </header>
 
     <div>
-      <div class="container" style="position: absolute">
+      <div class="container" style="position: relative">
         {% if messages %} {% for message in messages %}
         <div class="alert alert-{{message.tags}}" style="position: absolute">
           {{message}}
