--- a/steamClone_project/steamClone/static/steamClone/css/template.css
+++ b/steamClone_project/steamClone/static/steamClone/css/template.css
@@ -1115,3 +1115,69 @@ color: #FFFFFF;
     left: 109px;
     top: 599px;
 }
+
+.fragment {
+    font-size: 12px;
+    font-family: tahoma;
+    border: 1px solid #ccc;
+    color: #555;
+    display: block;
+    padding: 10px;
+    box-sizing: border-box;
+    text-decoration: none;
+    align-content: center;
+    border-radius: 15px;
+    background-color:#555555;
+}
+
+.fragment:hover {
+    box-shadow: 2px 2px 5px rgba(0,0,0,.2);
+
+}
+
+.fragment img { 
+    float: left;
+    margin-right: 10px;
+}
+
+
+.fragment h3 {
+    padding: 0;
+    margin: 0;
+    color: #369;
+}
+.fragment h4 {
+    padding: 0;
+    margin: 0;
+    color: #000;
+}
+#close {
+    float: left;
+    display:inline-block;
+    padding:2px 5px;
+    background:#ccc;
+}
+
+#close:hover {
+    float: left;
+    display:inline-block;
+    padding:2px 5px;
+    background:#ccc;
+    color:#fff;
+}
+
+.cart-rec-lo {
+    position: absolute;
+    width: 1253px;
+    height: 268px;
+    left: 102px;
+    top: 254px;
+}
+
+.cart-rec-lo2 {
+    position: absolute;
+    width: 1253px;
+    height: 268px;
+    left: 102px;
+    top: 589px;
+}
