--- a/steamClone_project/steamClone/templates/steamClone/Cart-Login.html
+++ b/steamClone_project/steamClone/templates/steamClone/Cart-Login.html
@@ -6,28 +6,36 @@
 <!---->
 
 <h1 class="Cart-text">YOUR CART</h1>
-<!--Games Cart position-->
-<area class="Cart-Games-Rec-1" />
-<a class="Cart-Games-Pics-1" href="Detail.html"></a>
-<h1 class="Cart-Games-Name-1" href="Detail.html">NAME</h1>
 
-<area class="Cart-Games-PriceRec-1" />
-<h1 class="Cart-Games-PriceText-1">Price : THB</h1>
-<img
-  class="Cart-Games-Close-1"
-  src="{% static 'steamClone/res/close-symbol.png' %}"
-/>
+<div class="container">
+  <div id="myDiv">
+    <a class="fragment cart-rec-lo" href="#">
+      <div>
+        <button class="close" onclick="document.getElementById('myDiv').style.display='none'" >X</button>
+        <br>
+        <a class="Cart-Games-Pics-1"></a>
+        <a class="Cart-Games-Name-1">Name</a>
+        <div class="Cart-Games-PriceRec-1"></div>
+        <a class="Cart-Games-PriceText-1">Price: THB</a>
+      </div>
+    </a>
+  </div>
+</div>
 
-<area class="Cart-Games-Rec-2" />
-<a class="Cart-Games-Pics-2" href="Detail.html"></a>
-<h1 class="Cart-Games-Name-2" href="Detail.html">NAME</h1>
-
-<area class="Cart-Games-PriceRec-2" />
-<h1 class="Cart-Games-PriceText-2">Price : THB</h1>
-<img
-  class="Cart-Games-Close-2"
-  src="{% static 'steamClone/res/close-symbol.png' %}"
-/>
+<div class="container">
+  <div id="myDiv2">
+    <a class="fragment cart-rec-lo2" href="#">
+      <div>
+        <button class="close" onclick="document.getElementById('myDiv2').style.display='none'" >X</button>
+        <br>
+        <a class="Cart-Games-Pics-2"></a>
+        <a class="Cart-Games-Name-2">Name</a>
+        <div class="Cart-Games-PriceRec-2"></div>
+        <a class="Cart-Games-PriceText-2">Price: THB</a>
+      </div>
+    </a>
+  </div>
+</div>
 
 <!---->
 {% endblock content %}
