finish admin page

--- a/steamClone_project/steamClone/templates/steamClone/Add-Admin.html
+++ b/steamClone_project/steamClone/templates/steamClone/Add-Admin.html
@@ -9,14 +9,15 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">
-      This is a modified jumbotron that occupies the entire horizontal space of
-      its parent.
-    </p>
+    <p class="lead"></p>
   </div>
 
-  <form action="" method="post" autocomplete="off">
+  <form
+    action=""
+    method="post"
+    autocomplete="off"
+    style="width: 50%; position: absolute; top: 200px; left: 300px"
+  >
     {% csrf_token %} {{form.name|as_crispy_field}}
     {{form.description|as_crispy_field}}
     <div class="row">
