--- a/steamClone_project/steamClone/templates/steamClone/Edit-Admin.html
+++ b/steamClone_project/steamClone/templates/steamClone/Edit-Admin.html
@@ -28,8 +28,8 @@
         <td>{{game.genre}}</td>
         <td>{{game.price}}$</td>
         <td>
-          <a href="{% url 'edit' game.id %}" class="btn text-secondary px-0">
-            <i class="far fa-edit fa-lg"></i>
+          <a href="{% url 'edit' game.id %}" class="btn btn-warning px-0">
+            <i class="far fa-edit fa-lg"></i>Edit
           </a>
           <form
             action="{% url 'delete' game.id %}"
@@ -37,8 +37,9 @@
             class="d-inline"
           >
             {% csrf_token %}
-            <button type="submit" class="btn">
-              <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+            <button type="submit" class="btn btn-danger">
+              <i class="far fa-trash-alt fa-lg text-danger float-right"></i
+              >Delete
             </button>
           </form>
         </td>
