--- a/steamClone_project/steamClone/templates/steamClone/base.html
+++ b/steamClone_project/steamClone/templates/steamClone/base.html
@@ -28,25 +28,32 @@
 
     <!--TopBar == header-->
     <area class="TopBar-area" />
-    <header class="TopBar">
-      <a class="SteamCloneSide" href="{% url 'main' %}">SteamClone</a>
-      {% if user.is_superuser %}
-      <a
-        href="{% url 'list' %}"
-        style="position: absolute; left: 1337px; top: 14px"
-        >Admin</a
-      >
-      {% elif user.is_authenticated %}
-      <!--output userProfile when is authenticated-->
-      <a class="User-circle" href="{% url 'profile' %}"
-        ><area class="User-circle"
-      /></a>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black; height: 104px;">
+          <div class="container-fluid">
+            <a class="navbar-brand" style="font-size: larger;" href="{% url 'main' %}">SteamClone</a>
 
-      {% else %}
-      <!--output login and register when not login-->
-      <a class="TopBar-login" href="{% url 'login' %}">LOGIN</a>
-      <a class="TopBar-register" href="{% url 'register' %}">REGISTER</a>
-      {% endif %}
+              {% if user.is_superuser %}
+              <a href="{% url 'list' %}" style="position: absolute; left: 1337px; top: 14px">Admin</a>
+
+              {% elif user.is_authenticated %}
+              <!--output userProfile when is authenticated-->
+              <a class="User-circle" href="{% url 'profile' %}"><area class="User-circle"/></a>
+
+              {% else %}
+              <!--output login and register when not login-->
+              <ul class="nav justify-content-end">
+                  <li class="nav-item">
+                    <a class="nav-link" style="color: white;" href="{% url 'login' %}">Login</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" style="color: white; text-decoration: underline;" href="{% url 'register' %}">Register</a>
+                  </li>
+              </ul>
+              {% endif %}
+            </div>
+          </div>
+      </nav>
     </header>
 
     <div>
@@ -61,26 +68,34 @@
     </div>
 
     <!--BottomBar == footer-->
-    <area class="bottomBar" />
     <footer>
-      <a class="bottomBar-home" href="{%  url 'main' %}"
-        ><img src="{% static 'steamClone/res/Home.png' %}"
-      /></a>
-      <a class="bottomBar-library" href="{% url 'profile' %}"
-        ><img src="{% static 'steamClone/res/Library.png' %}"
-      /></a>
-      <a class="bottomBar-cart" href="{% url 'cart' %}"
-        ><img src="{% static 'steamClone/res/Cart.png' %}"
-      /></a>
+      <nav class="navbar navbar-expand-lg bg-light bottomBar">
+        <div class="container-fluid">
 
-      {% if user.is_authenticated %}
-      <!--output logout when authenticated-->
-      <a class="bottomBar-logout" href="{% url 'logout' %}"
-        ><img src="{% static 'steamClone/res/Logout.png' %}"
-      /></a>
-      {% endif %}
+          <!-- navigator -->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{%  url 'main' %}"><img src="{% static 'steamClone/res/Home.png' %}" style="width: 35px; height: 35px;"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'profile' %}"><img src="{% static 'steamClone/res/Library.png' %}" style="width: 35px; height: 35px;"></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'cart' %}"><img src="{% static 'steamClone/res/Cart.png' %}" style="width: 35px; height: 35px;"></a>
+            </li>
+          </ul>
+
+          {% if user.is_authenticated %}
+          <!--output logout when authenticated-->
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'logout' %}"><img src="{% static 'steamClone/res/Logout.png' %}" style="width: 35px; height: 35px;"></a>
+            </li>
+          </ul>
+          {% endif %}
+        </div>
+      </nav>
     </footer>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
