update game database

--- a/steamClone_project/steamClone/templates/steamClone/Detail.html
+++ b/steamClone_project/steamClone/templates/steamClone/Detail.html
@@ -15,6 +15,9 @@
 </h1>
 <h1 class="Detail-Games-detail" style="top: 300px">{{game.genre}}</h1>
 <h1 class="Detail-Games-detail" style="top: 350px">{{game.price}}$</h1>
+<a href="{{game.url}}" class="Detail-Games-detail" style="top: 400px"
+  >Go to External Game Page</a
+>
 
 <!--System requirement-->
 <area class="Detail-Games-Sys-Rec" />
