--- a/steamClone_project/steamClone/templates/steamClone/Add-Admin.html
+++ b/steamClone_project/steamClone/templates/steamClone/Add-Admin.html
@@ -24,7 +24,7 @@
       <div class="col-md-4">{{form.genre|as_crispy_field}}</div>
       <div class="col-md-8">{{form.price|as_crispy_field}}</div>
     </div>
-    {{form.poster|as_crispy_field}}
+    {{form.poster|as_crispy_field}} {{form.url|as_crispy_field}}
     <div class="row">
       <div class="col-md-8">
         <button type="submit" class="btn btn-success btn-block btn-lg">
