--- a/steamClone_project/steamClone/templates/steamClone/base.html
+++ b/steamClone_project/steamClone/templates/steamClone/base.html
@@ -31,7 +31,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black; height: 104px;">
           <div class="container-fluid">
-            <a class="navbar-brand" style="font-size: larger;" href="{% url 'main' %}">SteamClone</a>
+            <a class="navbar-brand" style="font-size: 48px;" href="{% url 'main' %}">SteamClone</a>
 
               {% if user.is_superuser %}
               <a href="{% url 'list' %}" style="position: absolute; left: 1337px; top: 14px">Admin</a>
